# multi-cursor

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  index.html  package-lock.json  package.json
docs/: macos-distribution.md
scripts/: install-app.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: about.rs  auth.rs  commands.rs  copy_progress.rs  cursor.rs  lib.rs  main.rs  paths.rs  updates.rs  window_frame.rs
