[package]
name = "multi-cursor"
version = "0.1.0"
description = "Multi-Cursor account and environment launcher"
authors = ["you"]
edition = "2021"

[lib]
name = "multi_cursor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSAttributedString", "NSDictionary", "NSString", "NSURL", "NSRange"] }
objc2-app-kit = { version = "0.3.2", features = ["NSWindow", "NSScreen", "NSApplication", "NSAttributedString"] }
